src/test/ui/issues/issue-2951.stderr
error[E0308]: mismatched types
  --> $DIR/issue-2951.rs:3:10
   |
LL |     xx = y;
   |          ^ expected type parameter, found a different type parameter
   |
   = note: expected type `T`
              found type `U`
   = note: a type parameter was expected, but a different one was found; you might be missing a type parameter or trait bound
   = note: for more information, visit https://doc.rust-lang.org/book/ch10-02-traits.html#traits-as-parameters

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
